# pocket-timelapse

./: .gitignore  LICENSE  README.md
time-splatting/: README.md  dataloader.py  gsplat_viewer.py  options.py  pyproject.toml  requirements.txt  train.py  utils.py  viewer_main.py
